fixed react lazy flicker

--- a/src/components/Navigation/NavigationItems/MobileNavigationItems/MobileNavigationItems.module.css
+++ b/src/components/Navigation/NavigationItems/MobileNavigationItems/MobileNavigationItems.module.css
@@ -35,6 +35,15 @@ a {
   color: inherit;
 }
 
+.listItem {
+  display: flex;
+}
+.listIcon {
+  display: block;
+  font-size: 16px;
+  margin-right: 8px;
+}
+
 .MobNavContainer a {
   display: block;
   color: inherit;
