--- a/src/pages/AboutUsPage/AboutUsPage.module.css
+++ b/src/pages/AboutUsPage/AboutUsPage.module.css
@@ -14,6 +14,7 @@
   width: 100%;
   max-width: 500px;
   border-radius: 10px;
+  margin: 0 10px;
 }
 .paragWrap {
   width: 75%;
