--- a/src/pages/BasketPages/BreadproofingBaskets/BreadproofingBaskets.module.css
+++ b/src/pages/BasketPages/BreadproofingBaskets/BreadproofingBaskets.module.css
@@ -89,7 +89,7 @@
   justify-content: center;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1140px) {
   .Container {
     min-height: 80vh;
     width: 98%;
